# raest

./: Cargo.toml  README.md  rustfmt.toml
scenes/: cornell_box.toml  simple.toml
src/: aabb.rs  bdpt.rs  bvh.rs  camera.rs  config.rs  geometry.rs  main.rs  material.rs  pdf.rs  ray.rs  raytrace.rs  renderer.rs  scene.rs  texture.rs  udpt.rs  util.rs
src/geometry/: aabb.rs  block.rs  bvh.rs  mod.rs  onb.rs  parser.rs  rect.rs  sphere.rs  transform.rs
