[package]
name = "raest"
version = "0.1.0"
authors = ["Aakash Patel <aakpat6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.16.0"
nalgebra = "0.21.0"
rand = {version = "0.7.3", features = ["small_rng"]}
