[package]
name = "raest"
version = "0.1.0"
authors = ["Aakash Patel <aakpat6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.16.0"
nalgebra = {version = "0.21.0", features = ["serde-serialize"]}
approx = "0.3.2"
crossbeam = "0.7.3"
rand = {version = "0.7.3", features = ["small_rng"]}
image = "0.23.4"
structopt = "0.3.14"
serde = {version = "1.0.110", features = ["derive"]}
toml = "0.5.6"

[profile.dev]
opt-level = 3

[profile.release]
debug = true
